src/pages/report/editor-view.css
.page-report > .report-editor .view-editor-form {
    margin: 0 -40px 12px;
}

.page-report > .report-editor .view-editor-form-header {
    display: flex;
}
.page-report > .report-editor .view-editor-form-header-links {
    flex: 1;
    margin: 2px 40px 0 10px;
    text-align: right;
    font-size: 12px;
}

.page-report > .report-editor .report-editor-tabs.view-mode::before {
    display: inline-block;
    content: 'View:';
}
.page-report > .report-editor .report-editor-tabs.presets {
    margin-left: 3ex;
}
.page-report > .report-editor .report-editor-tabs.presets::before {
    content: 'View presets:'
}
.page-report > .report-editor .report-editor-tabs.presets .report-editor-tab:first-child {
    border-bottom-left-radius: 4px;
}

.page-report > .report-editor .view-editor-form-content {
    padding: 8px 40px;
    margin-bottom: 1px;
    background-color: rgba(108, 188, 241, 0.15)
}
.page-report > .report-editor .view-editor-form-content .formatting {
    position: absolute;
    left: 5px;
    width: 30px;
    height: 30px;
    font-size: 0;
    background-image: url('./img/formatting.svg');
    background-repeat: no-repeat;
    background-size: 20px;
    background-position: center;
    border-color: rgba(21, 98, 148, 0.3);
}

.page-report > .report-editor .view-editor-form-content .view-expand {
    width: 100%;
    margin-top: 5px;
}

.page-report > .report-editor .view-editor-form-content .view-expand .header {
    background: none;
}
.page-report > .report-editor .view-editor-form-content .view-expand .header:hover {
    background: rgba(0, 0, 0, .05);
}

.page-report > .report-editor .view-editor-form-content .view-editor-view-list {
    display: none;
    padding: 15px 8px;
    font-size: 12px;
    color: #aaa;
    column-count: 8;
    column-width: 150px;
    column-gap: 20px;
    margin-right: -190px;
}
.page-report > .report-editor .view-editor-form-content .view-editor-view-list.visible {
    display: block;
}
.page-report > .report-editor .view-editor-form-content .view-editor-view-list .item:not([href]) {
    color: #888;
}

.discovery-view-popup.view-editor-view-list-hint {
    padding: 20px;
    min-width: 640px;
    min-height: 100px;
}
.discovery-view-popup.view-editor-view-list-hint > .discovery-view-usage > .view-header:first-child {
    font-size: 16px;
    background: rgba(180, 180, 180, 0.2);
    margin: -20px -20px 0;
    padding: 6px 20px;
    line-height: 24px;
}

